# pico-freertos

./: CMakeLists.txt  README.md  build-log.txt  free_rtos_hooks.c  main.c
include/: FreeRTOSConfig.h
